# plotto

./: .gitignore  pyproject.toml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/_templates/autosummary/: class.rst
doc/source/api_reference/: index.rst  plotto.rst
doc/source/example_notebooks/: index.rst
doc/source/getting_started/: index.rst
examples/: plotto.ipynb
