[tool.poetry]
name = "plotto"
version = "0.1.0"
description = ""
authors = ["Bernardo Dionisi <bernardo.dionisi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.2.0"
numpy = "^1.23.4"
pandas = "~1.4"


[tool.poetry.group.doc.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
